Refactor order summary card structure and update styles for improved layout and hover effects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="wrapper">
 
-        <article class="card"></article>
+        <article class="card">
 
             <header class="image">
                 <img src="images/illustration-hero.svg" alt="hero illustration" class="title-image">
@@ -32,7 +32,7 @@
                                 <h4 class="amount">$59.99/year</h4>
                             </div>
                         </div>
-                        <a href="#" class="change">Change</a>
+                        <p href="#" class="change">Change</p>
                     </div>
                 </section>
 
